--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.username=${SPRING_POSTGRES_USER}
 #spring.datasource.password=${SPRING_POSTGRES_PASSWORD}
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=developer
-spring.datasource.password=developer
+spring.datasource.username=shareit
+spring.datasource.password=2244
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
