--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.8'
 
 services:
   gateway:
-    build: ./gateway
+    build: gateway
+    image: gateway
     container_name: ShareIt-gateway
     ports:
       - "8080:8080"
@@ -13,7 +14,8 @@ services:
       - SHAREIT_SERVER_URL=http://server:9090
 
   server:
-    build: ./server
+    build: server
+    image: server
     container_name: ShareIt-server
     ports:
       - "9090:9090"
@@ -21,8 +23,11 @@ services:
       - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - SPRING_POSTGRES_USER=shareit
-      - SPRING_POSTGRES_PASSWORD=2244
+      - DB_HOST=localhost
+      - DB_PORT=5432
+      - DB_NAME=shareit
+      - POSTGRES_USER=shareit
+      - POSTGRES_PASSWORD=2244
 
   db:
     image: postgres:14.6-alpine
