--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=shareit
 spring.datasource.password=2244
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
